# msc

./: .gitignore  .gitmodules  MNIST_conditional_prediction.ipynb  README.md  bpy_animate_addon.py  bpy_render_hand.py  config.py  create_animation.py  create_dataset.py  datasets.py  experiments.ipynb  gen_data.py  hand-rig.blend  hands_dataloader.py  hands_model.py  main.py  mnist_dataloader.py  models.py  nb2.ipynb  notebook.ipynb  pyproject.toml  rand_anim.py  remove_bad_output_dirs.py  render.py  requirements.txt  schedules.py  test.fish  train.py  training.py  vit.ipynb  viz_default_anim.ipynb
_mnist_plots/: mnist.html
anims/: ds_bottle1_body1_left_1500.npy
blender/: bpy_animate_addon.py  bpy_render_hand.py  hand-rig.blend
cgt-mnist/: cgt-mnist-Copy1.ipynb  cgt-mnist-Copy2.ipynb  cgt-mnist.ipynb  conditional-prob.ipynb  cuda10.ipynb  cuda11.ipynb  cuda2.ipynb  cuda3.ipynb  cuda5.ipynb  cuda6.ipynb  cuda7.ipynb  datasets.py  entropy-ordering.ipynb  models.py  real-cuda11.ipynb  schedules.py  training.py  vizualization.py  works-lol.ipynb
cgt-mnist-2/: cgt-mnist-2.ipynb
distributed/: main.py
hand low poly/: hand-rig.blend  leftHand.1frame.bvh
ml/: data_bvh.py  data_tf.py  deberta.py  decoders.py  dream.py  embed.py  embedders.py  encoders.py  losses.py  model_huggingface.py  model_lstm.py  model_mlp.py  model_transformer.py  models.py  predict.py  prediction_heads.py  predictor.py  util.py  utils.py  viz.py
msc-1-mnist/: pyproject.toml
msc-2-mnist/: .gitignore  notebook_test.ipynb  transformer_image.ipynb
msc-3-pytorch/: Readme.md  example_bvh.py  (+4 more)
(+169 files in other folders)
