[tool.poetry]
name = "msc"
version = "0.1.0"
description = "Conditional generative transformer on MNIST"
authors = ["Maxwell Clarke <maxeonyx@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyterlab = "^3.2.0"
matplotlib = "^3.4.3"
tensorflow = "^2.6.0"
numpy = "^1.19"
enlighten = "^1.10.1"
scikit-learn = "^1.0"
wandb = "^0.12.4"
Pillow = "^8.4.0"
tensorflow-datasets = "^4.4.0"
graphviz = "^0.17"
pydot = "^1.4.2"
tensorflow-probability = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
