[tool.poetry]
name = "msc-cgt-hands"
version = "0.1.0"
description = "Conditional Generative Transformer for hand motion prediction"
authors = ["Maxwell Clarke <maxeonyx@gmail.com>"]
license = "None"

[tool.poetry.dependencies]
python = "=3.10.*"
dotmap = "^1.3.26"
tensorflow = "^2.8.0"
tensorflow-datasets = "^4.4.0"
tensorflow-probability = "^0.14.1"
ipywidgets = "^7.6.5"
enlighten = "^1.10.1"
scikit-learn = "^1.0"
jupyterlab = "^3.2.0"
matplotlib = "^3.4.3"
wandb = "^0.12.4"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
